--- a/HTML/zen_mockup/zen_mockup.css
+++ b/HTML/zen_mockup/zen_mockup.css
@@ -26,6 +26,11 @@ h2 {
 	color: rgb(255,246,224);
 	border-radius: 2px;
 	font-weight: lighter;
+	padding: 3px;
+}
+
+h3 {
+	font-weight: lighter;
 }
 
 .preamble h3 {
@@ -37,6 +42,7 @@ h2 {
 	color: rgb(255,246,224);
 	border-radius: 2px;
 	box-shadow: 22px 30px rgb(122,179,176);
+	padding: 10px;
 }
 
 .preamble p {
@@ -52,6 +58,7 @@ h2 {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	box-shadow: 30px 38px rgb(122,179,176);
+	padding-left: 18px;
 }
 
 .main p {
@@ -61,6 +68,7 @@ h2 {
 footer {
 	text-align: right;
 	font-size: 17px;
+	padding: 25px;
 }
 
 footer a {
@@ -68,20 +76,30 @@ footer a {
 	color: rgb(255,246,224);
 	font-family: sans-serif;
 	text-decoration: none;
-	box-shadow: 7px 10px rgb(216,207,188);
+	box-shadow: 10px 15px rgb(216,207,188);
 	margin: -2px;
+	padding: 5px;
+	border-radius: 2px;
 }
 
 .zen-resources li {
 	background-color: rgb(226,48,69);
-	margin: 4px;
-	box-shadow: 8px 11px rgb(245,149,129);	
+	margin: 5px;
+	box-shadow: 10px 15px rgb(245,149,129);
+	padding: 5px 8px 5px 8px;
+	width: 200px;
+	list-style-type: none;
+	text-align: center;
 }
 
 li a {
 	color: rgb(255,246,224);
 	font-family: sans-serif;
 	text-decoration: none;
+}
+
+aside h3 {
+	display: none;
 }
 
 
